test/typeCheckTest/fail/test25.ic
class BadMinus {
	void main (string [] args) {
		int x = 1 - false;
	}
}